
syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHelloClientToServer (stream HelloRequest) returns (HelloReply) {}
  rpc SayHelloServerToClient (HelloRequest) returns (stream HelloReply) {}

  rpc SayHelloServerToServer (stream HelloRequest) returns (stream HelloReply) {}
}


message HelloRequest {
  string name = 1;
}


message HelloReply {
  string message = 1;
}
